--- a/ecomstore/ecomstore/templates/catalog.html
+++ b/ecomstore/ecomstore/templates/catalog.html
@@ -16,7 +16,7 @@
                Modern Musician 
           </div> 
           <div class="navIEPadder"> 
-                [navigation here] 
+               {% include 'tags/navigation.html' %}
           </div> 
           <div id="sidebar"> 
                <div class="sidebarIEPadder"> 
@@ -32,7 +32,7 @@
           </div> 
           <div class="footerIEPadder"> 
                [footer here] 
-           </div> 
+          </div> 
                     {% block content %}{% endblock %} 
      </div> 
 </div> 
